<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pass.PassActivity"
    >

    <Button
        android:id="@+id/buttonConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/Red"
        android:fontFamily="@font/intermedium"
        android:text="@string/addCard"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCard" />

    <TextView
        android:id="@+id/passScanner"
        style="@style/layout_title"
        android:text="@string/scanner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-34dp"
        app:layout_constraintEnd_toEndOf="@+id/passScanner"
        app:layout_constraintStart_toStartOf="@+id/passScanner"
        app:layout_constraintTop_toBottomOf="@+id/passScanner"
        app:srcCompat="@drawable/logo_line" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/Red"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/textName"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:text="@string/cardNumber"
        android:textColor="@color/Red"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/textCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textCard"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/typeYourName"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textCard"
        app:layout_constraintTop_toBottomOf="@+id/logoLine"
        app:layout_constraintVertical_bias="0.23" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/typeYourCardNumber"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textName" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backButton"
        android:onClick="onBackButton"
        app:backgroundTint="@color/Red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="48dp"
        app:srcCompat="?attr/actionModeCloseDrawable"
        style="@style/backButton" />


</androidx.constraintlayout.widget.ConstraintLayout>